# chord

./: .clang-format  .gitignore  .gitlab-ci.txt  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  main.cpp
cmake/: chordConfig.cmake  chordConfig.cmake.in  chordConfigVersion.cmake
docs/: Doxyfile  gbenchmark_install.sh
include/: chord_status.hpp  chord_structs.hpp  lib.hpp  lib.tpp  lib_impl.hpp
include/check_args/: check_not_zero.hpp
include/chord/: chord_status.hpp  chord_types.hpp  lib.hpp  lib.tpp
include/chord/check_args/: check_equal_sizes.hpp  check_not_zero.hpp
src/impls/: CMakeLists.txt  lib_inst.cpp
src/impls/ipp/: ipp_impl.tpp
src/impls/ipp/cast_to_ipp/: cast_to_ipp.hpp  mapping_types.inl
src/impls/ipp/ipp_wrappers/: ipp_wrappers.hpp
src/impls/ipp/ipp_wrappers/specializations/: all_specialized_declarations.hpp
src/impls/ipp/ipp_wrappers/specializations/declarations/: ipp_abs.hpp  ipp_add.hpp  ipp_cis.hpp  ipp_conj.hpp  ipp_dft_get_size.hpp  ipp_div.hpp  ipp_dot_prod.hpp  ipp_exp.hpp  ipp_fft_get_size.hpp  ipp_flip.hpp  ipp_floor.hpp  ipp_frac.hpp  ipp_magnitude.hpp  ipp_malloc.hpp  ipp_max.hpp  ipp_mean.hpp  ipp_min.hpp  ipp_modf.hpp  ipp_mul.hpp  ipp_pow.hpp  ipp_sample_up.hpp  ipp_sqr.hpp  ipp_sub.hpp  ipp_sum.hpp  ipp_tone.hpp  ipp_vector_slope.hpp  ipp_xor.hpp
src/impls/ipp/ipp_wrappers/specializations/definitions/: ipp_abs.cpp  ipp_add.cpp  ipp_cis.cpp  ipp_conj.cpp  ipp_dft_get_size.cpp  ipp_div.cpp  ipp_dot_prod.cpp  ipp_exp.cpp  ipp_fft_get_size.cpp  ipp_flip.cpp  ipp_floor.cpp  ipp_frac.cpp  ipp_magnitude.cpp  ipp_malloc.cpp  ipp_max.cpp  ipp_mean.cpp  ipp_min.cpp  ipp_modf.cpp  ipp_mul.cpp  ipp_pow.cpp  ipp_sample_up.cpp  ipp_sqr.cpp  ipp_sub.cpp  ipp_sum.cpp  ipp_tone.cpp  ipp_vector_slope.cpp  ipp_xor.cpp
src/impls/std/: std_impl.tpp
src/tests/: CMakeLists.txt  main.cpp
src/tests/gbenchmark/: CMakeLists.txt  main.cpp
src/tests/gbenchmark/ipp/: divide.benchmark.cpp
src/tests/gtest/: CMakeLists.txt  main.cpp
src/tests/gtest/ipp_tests/: apply_absolute.test.cpp  apply_flip.test.cpp  apply_power.test.cpp  apply_square.test.cpp  combine.test.cpp  combine_with_scalar.test.cpp  compute_complex_conjugate.test.cpp  compute_complex_exponent.test.cpp  compute_complex_magnitude.test.cpp  compute_dot_product.test.cpp  compute_exponential.test.cpp  compute_fractional_part.test.cpp  compute_mean_value.test.cpp  compute_real_imag_magnitude.test.cpp  compute_substraction.test.cpp  compute_sum.test.cpp  compute_up_sample.test.cpp  compute_xor.test.cpp  divide_by_scalar.test.cpp  divide_list_by_list.test.cpp  fill_slope.test.cpp  find_min_max.test.cpp  floor.test.cpp  generate_tone.test.cpp  integer_fraction_split.test.cpp  multiply_with_scalar.test.cpp
src/tests/gtest/std_tests/: apply_absolute.test.cpp  apply_flip.test.cpp  apply_power.test.cpp  apply_square.test.cpp  combine.test.cpp  combine_with_scalar.test.cpp  compute_average.test.cpp  compute_complex_conjugate.test.cpp  compute_complex_exponent.test.cpp  compute_complex_magnitude.test.cpp  compute_exponential.test.cpp  compute_mean_value.test.cpp  compute_substraction.test.cpp  compute_xor.test.cpp  divide_by_scalar.test.cpp  fft.test.cpp  fill_slope.test.cpp  find_min_max.test.cpp  floor.test.cpp  fraction_split.test.cpp  generate_tone_samples.test.cpp  multiply_with_scalar.test.cpp  sample_up.test.cpp
src/tests/gtest/utils/: generate_smoke_tests.py  test_functions_helpers.hpp  test_functions_helpers.tpp  test_runner.hpp
src/utils/: CMakeLists.txt
src/utils/builtin_math/: math_std.hpp  math_std.tpp
src/utils/check_and_return_status/: check_not_zero.hpp
src/utils/random_generate/: random_utils.hpp
src/utils/types/: concepts.hpp  template_specialization.hpp
src/utils/types/casts/: cast.cpp  cast.hpp
